--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind Navbar</title>
+ <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;600;700&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="disk/styles.css">
 
   </head>
@@ -24,10 +28,10 @@
           <!-- Navigation Links -->
           <div class="flex items-center space-x-10">
             <ul
-              class="md:flex space-x-5 text-black font-Righteous font-semibold"
+              class="md:flex space-x-5 text-black font-righteous font-semibold"
             >
               <li>
-                <a href="#" class="hover:underline"> Home </a>
+                <a href="#" class="hover:underline "> Home </a>
               </li>
               <li>
                 <a href="#" class="hover:underline"> About </a>
@@ -55,7 +59,7 @@
               <a href="#" class="underline text-black font-righteous">Login</a>
               <a
                 href="#"
-                class="border-2 px-4 py-3 text-center font-Saira rounded-lg bg-gradient-to-r from-[#083F9B] to-[#7F56D9] text-white"
+                class="border-2 px-4 py-3 text-center font-Saira  rounded-lg bg-gradient-to-r from-[#083F9B] to-[#7F56D9] text-white"
               >
                 Signup
               </a>
@@ -71,13 +75,13 @@
       >
         <div class="text-justify w-100 h-auto mx-4 leading-8  pt-20 pl-10 pb-20  ">
           <!-- Tagline -->
-          <p class="text-white text-lg font-medium mb-4">
+          <p class="text-white text-lg font-medium font-righteous mb-4">
             Successful coaches are visionaries
           </p>
 
           <!-- Title -->
           <h1
-            class="text-white font-Righteous font-black text-4xl break-words mb-4"
+            class="text-white font-righteous font-black text-4xl break-words mb-4 font-Righteous"
           >
             Good <span class="text-[#0E38CD]">coaching</span> is good teaching &
             nothing else.
@@ -87,11 +91,11 @@
           <div class="flex items-center space-x-4">
             <a
               href="#"
-              class="border-2 border-white text-white rounded-lg px-5 py-2 transition-all duration-300 hover:bg-white hover:text-[#04016C]"
+              class="border-2 border-white text-white font-righteous rounded-lg px-5 py-2 transition-all duration-300 hover:bg-white hover:text-[#04016C]"
             >
               View Courses
             </a>
-            <a href="#" class="text-white hover:text-[#0E38CD]">
+            <a href="#" class="text-white font-righteous hover:text-[#0E38CD]">
               Get Free Consultation
             </a>
           </div>
@@ -104,8 +108,8 @@
             class="h-20"
             alt="img"
           />
-          <div class="mx-4 max-w-62 text-xs">
-            <p>Shyam</p>
+          <div class="mx-4 max-w-62 font-righteous text-xs">
+            <p class="font-Rowdies">Shyam</p>
             <p>
               In a coaching role, you ask the questions and rely more on your
               staff, who become the experts, to provide the information.
@@ -188,15 +192,15 @@
       
       <!-- Text Section -->
       <div class="flex flex-col items-center justify-center font-bold"> 
-        <h1 class="text-3xl">
+        <h1 class="text-3xl font-Rowdies">
           Featured <span class="text-[#4883FF]">Course</span>
         </h1>
-        <p class="text-center">The featured courses are we invented our teaching part</p>
+        <p class="text-center ">The featured courses are we invented our teaching part</p>
       </div>
     </div>
   </div>
   <!---Cources ---------------------------------->
-  <div class="flex flex-wrap justify-center gap-8 items-center mx-48 py-16 ">
+  <div class="flex flex-wrap font-Saira justify-center gap-8 items-center mx-48 py-16 ">
     <div class="w-[254px] h-[300px] bg-white border rounded-xl">
       <img src="./public/course/1.jpg" alt="Course Image" class="w-full h-[150px] object-cover rounded-t-lg">
       <div class="flex items-start gap-12 p-2">
@@ -211,7 +215,7 @@
         </div>
     </div>
     <!--2--------------------------------------------------------------->
-    <div class="w-[254px] h-[300px] bg-white border rounded-xl">
+    <div class="w-[254px] h-[300px] font-Saira bg-white border rounded-xl">
       <img src="./public/course/2.png" alt="Course Image" class="w-full h-[150px] object-cover rounded-t-lg">
       <div class="flex items-start gap-12 p-2">
         <p>9,575 Students</p>
@@ -225,7 +229,7 @@
         </div>
     </div>
       <!--3--------------------------------------------------------------->
-    <div class="w-[254px] h-[300px] bg-white border rounded-xl">
+    <div class="w-[254px] h-[300px] font-Saira bg-white border rounded-xl">
       <img src="./public/course/3.png" alt="Course Image" class="w-full h-[150px] object-cover rounded-t-lg">
       <div class="flex items-start gap-12 p-2">
         <p>2,957 Students</p>
@@ -239,7 +243,7 @@
         </div>
     </div>
         <!--4--------------------------------------------------------------->
-    <div class="w-[254px] h-[300px] bg-white border rounded-xl">
+    <div class="w-[254px] h-[300px] font-Saira bg-white border rounded-xl">
       <img src="./public/course/4.png" alt="Course Image" class="w-full h-[150px] object-cover rounded-t-lg">
       <div class="flex items-start gap-12 p-2">
         <p>5,497 Students</p>
@@ -253,7 +257,7 @@
         </div>
     </div>
         <!--5--------------------------------------------------------------->
-    <div class="w-[254px] h-[300px] bg-white border rounded-xl">
+    <div class="w-[254px] h-[300px] font-Saira bg-white border rounded-xl">
       <img src="./public/course/5.png" alt="Course Image" class="w-full h-[150px] object-cover rounded-t-lg">
       <div class="flex items-start gap-12 p-2">
         <p>595 Students</p>
@@ -267,7 +271,7 @@
         </div>
     </div>
         <!--6--------------------------------------------------------------->
-    <div class="w-[254px] h-[300px] bg-white border rounded-xl">
+    <div class="w-[254px] h-[300px] font-Saira bg-white border rounded-xl">
       <img src="./public/course/6.png" alt="Course Image" class="w-full h-[150px] object-cover rounded-t-lg">
       <div class="flex items-start gap-12 p-2">
         <p>1,957 Students</p>
@@ -283,7 +287,7 @@
    
   </div>
   <div class="flex justify-center items-center">
-    <button class="w-[200px] h-12 p-2 bg-gradient-to-r from-[#04016C] to-[#4A16BD] opacity-75 text-white rounded shadow-md hover:opacity-100 transition-opacity duration-300">
+    <button class="w-[200px] font-righteous h-12 p-2 bg-gradient-to-r from-[#04016C] to-[#4A16BD] opacity-75 text-white rounded shadow-md hover:opacity-100 transition-opacity duration-300">
       Explore courses
     </button>
   </div></section>
@@ -309,15 +313,15 @@
 <div class=" pt-10 align-middle items-center justify-center flex ">
 
 <div class="ml-[500px]  text-white w-[400px]  " >
-  <h1 class="text-3xl py-4">Why <span class="text-[#0E38CD]">learn </span> with our courses?</h1>
-  <p class="text-center ">We are providing the best courses and top classes.And extradinery placement training.....</p></div>
+  <h1 class="text-3xl font-righteous py-4">Why <span class="text-[#0E38CD]">learn </span> with our courses?</h1>
+  <p class="text-center font-Saira ">We are providing the best courses and top classes.And extradinery placement training.....</p></div>
 </div>
 </div>
 <div class="align-middle ml-[380px] pb-16"><img src="./public/Group 1000014985.png" class="w-[780px] " alt="Groub"></div>
 </div>
 </section>
 <!--Category--------------------------------->
-<section>
+<section class="font-righteous">
   <div class="bg-gradient-to-b from-[rgb(255,255,255)] to-[#D9ECFF] w-full h-[480px] ">
     <div class="text-center">
       <h1 class="text-3xl py-4">Top <span class="text-[#0E38CD] ">Categories</span></h1>
@@ -393,8 +397,8 @@
   </div>
 </section>
 <!--Review-------------------------------->
-<section>
-  <div class="bg-gradient-to-b from-[rgb(255,255,255)] to-[#D9ECFF] w-full h-[950px] ">
+<section >
+  <div class="bg-gradient-to-b from-[rgb(255,255,255)] to-[#D9ECFF] w-full h-[950px] font-righteous ">
     <div >
     <div class="pt-[350px] flex items-center" ><img src="./public/review/Ellipse 1217.png" alt="">
     <div class="ml-[480px]" ><h1 class="text-[#0E38CD] text-3xl py-4">Testimonials</h1>
@@ -437,20 +441,97 @@
   </div>
  
 </section>
-<div class="mt-[300px] relative">
-  <!-- Background Image -->
-  <img src="./public/footer/Rectangle 8691 (1).png" alt="Background Image">
-  
-  <!-- Overlay Content -->
-  <div class="absolute flex top-10 space-x-4">
-    <div class="relative">
-      <!-- Ellipse Image -->
-      <img src="./public/footer/Ellipse 1223.png" alt="Ellipse">
-      <!-- 1 Image Positioned Separately -->
-      <img src="./public/footer/1.png" class="absolute top-[150px] left-[50px]" alt="Number 1">
-    </div>
-  </div>
-</div>
+    <section>
+      <div class="mt-[280px] relative">
+        <!-- Background Image -->
+        <img
+          src="./public/footer/Rectangle 8691 (1).png"
+          class="absolute h-full w-full"
+          alt="Background Image"
+        />
+        <div class="flex items-center justify-around">
+          <!-- 1------------------------------------->
+
+          <div class="absolute mt-32">
+            <div class="">
+              <!-- Ellipse Image -->
+              <img src="./public/footer/Ellipse 1223.png" alt="Ellipse" />
+              <!-- 1 Image Positioned Separately -->
+              <img
+                src="./public/footer/1.png"
+                class="absolute top-[12px] left-3"
+                alt="Number 1"
+              />
+            </div>
+          </div>
+
+          <!-- 1------------------------------------->
+          <!-- 2------------------------------------->
+          <div class="absolute mt-32 ml-44">
+            <div class="">
+              <!-- Ellipse Image -->
+              <img src="./public/footer/Ellipse 1223.png" alt="Ellipse" />
+              <!-- 1 Image Positioned Separately -->
+              <img
+                src="./public/footer/2.png"
+                class="absolute top-[12px] left-3"
+                alt="Number 1"
+              />
+            </div>
+          </div>
+
+          <!-- 2------------------------------------->
+          <!-- 3------------------------------------->
+          <div class="absolute mt-32 ml-[350px]">
+            <div class="">
+              <!-- Ellipse Image -->
+              <img src="./public/footer/Ellipse 1223.png" alt="Ellipse" />
+              <!-- 1 Image Positioned Separately -->
+              <img
+                src="./public/footer/3.png"
+                class="absolute top-[12px] left-3"
+                alt="Number 1"
+              />
+            </div>
+          </div>
+          <!-- 3------------------------------------->
+          <!-- 4------------------------------------->
+          <div class="absolute mt-32 ml-[500px]">
+            <div class="">
+              <!-- Ellipse Image -->
+              <img src="./public/footer/Ellipse 1223.png" alt="Ellipse" />
+              <!-- 1 Image Positioned Separately -->
+              <img
+                src="./public/footer/4.png"
+                class="absolute top-[12px] left-3"
+                alt="Number 1"
+              />
+            </div>
+          </div>
+          <!-- 4------------------------------------->
+          <!-- 5------------------------------------->
+          <div class="flex items-center justify-center">
+            <!-- Overlay Content -->
+            <div class="absolute mt-32 ml-[650px]">
+              <div class="">
+                <!-- Ellipse Image -->
+                <img src="./public/footer/Ellipse 1223.png" alt="Ellipse" />
+              <!-- 1 Image Positioned Separately -->
+              <img
+                src="./public/footer/5.png"
+                  class="absolute top-[12px] left-3"
+                  alt="Number 1"
+                />
+              </div>
+            </div>
+          </div>
+          <!-- 5------------------------------------->
+        </div>
+        <div class="flex justify-center mt-24 ml-[350px] font-righteous">
+          <p>Copyright @ 2023 askmeidentity. All Rights Reserved</p>
+        </div>
+      </div>
+    </section>
 
 
 </body>
