--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 </section>
 <!--Subscribe------------------------->
 <section>
-<div class="relative ml-[150px] mt-[100px]">
+<div class="relative ml-[100px] mt-[100px]">
   <div><img src="./public/subscribe/Polygon 8.png" class="ml-[500px] " alt="Polygon"></div>
   <div class="mt-[-100px]"><img src="./public/subscribe/Subscribe.png" class="absolute opacity-100 m-10" alt=""></div>
   <div ><img src="./public/subscribe/Bg.png" class="" alt=""></div>
@@ -390,7 +390,7 @@
 </section>
 <!---Video Play---------------------->
 <section>
-  <div class="relative ml-[400px] mt-10 h-[400px]">
+  <div class="relative ml-[300px] mt-10 h-[400px]">
     <div><img src="./public/video/Rectangle 8691.png" class="absolute w-[880px] "  alt=""></div>
     <div><img src="./public/video/Group 512857.png" class="absolute top-[150px] left-[350px]" alt=""></div>
     <div ><img src="./public/video/banner_right.png.png" class="absolute top-[280px] left-[680px]"  alt=""></div>
@@ -449,7 +449,7 @@
           class="absolute h-full w-full"
           alt="Background Image"
         />
-        <div class="flex items-center justify-around">
+        <div class="flex items-center justify-around ml-[-320px]">
           <!-- 1------------------------------------->
 
           <div class="absolute mt-32">
@@ -527,7 +527,7 @@
           </div>
           <!-- 5------------------------------------->
         </div>
-        <div class="flex justify-center mt-24 ml-[350px] font-righteous">
+        <div class="flex justify-center mt-24 ml-[-40px] font-righteous">
           <p>Copyright @ 2023 askmeidentity. All Rights Reserved</p>
         </div>
       </div>
