--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
           class="absolute h-full w-full"
           alt="Background Image"
         />
-        <div class="flex items-center justify-around ml-[-320px]">
+        <div class="flex items-center justify-around ml-[-320px] mt-[-10px]">
           <!-- 1------------------------------------->
 
           <div class="absolute mt-32">
@@ -527,7 +527,7 @@
           </div>
           <!-- 5------------------------------------->
         </div>
-        <div class="flex justify-center mt-24 ml-[-40px] font-righteous">
+        <div class="flex justify-center mt-16 ml-[-40px] font-righteous">
           <p>Copyright @ 2023 askmeidentity. All Rights Reserved</p>
         </div>
       </div>
