--- a/index.html
+++ b/index.html
@@ -442,14 +442,14 @@
  
 </section>
     <section>
-      <div class="mt-[280px] relative">
+      <div class="mt-[320px] relative">
         <!-- Background Image -->
         <img
           src="./public/footer/Rectangle 8691 (1).png"
           class="absolute h-full w-full"
           alt="Background Image"
         />
-        <div class="flex items-center justify-around ml-[-320px] mt-[-30px]">
+        <div class="flex items-center justify-around ml-[-320px] mt-[-50px]">
           <!-- 1------------------------------------->
 
           <div class="absolute mt-32">
@@ -527,7 +527,7 @@
           </div>
           <!-- 5------------------------------------->
         </div>
-        <div class="flex justify-center mt-16 ml-[-40px] font-righteous">
+        <div class="flex justify-center mt-[100px] ml-[-40px] font-righteous">
           <p>Copyright @ 2023 askmeidentity. All Rights Reserved</p>
         </div>
       </div>
